Добавлена активность для нерезкого маскирования
Добавлена пустая активность для нерезкого маскирования, соответствующие изменения внесены в адаптер RecyclerView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="rotation_image_desc">Текущее изображение</string>
     <string name="rotation_angle_hint">Угол поворота</string>
 
+    <string name="unsharp_mask">Нерезкое маскирование</string>
+
     <string name="save_picture_button">Сохранить</string>
 
     <string name="apply_button">Применить</string>
