Переделал масштабирование на правильное
До этого был обычный zoom изображения, теперь переделал на масштабирование.
Добавил:
1) Базовую реализацию масштабирования
2) Зафиксировал размер фоток на save фрагменте.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="isi">isi</string>
     <string name="kategori">kategori</string>
     <string name="kode">kode</string>
+    <string name="resize_koef">Коэфицент масштабирования</string>
 </resources>
