Добавил ползунки для параметров алгоритма
Добавлены ползунки для "радиуса размытия" и "эффекта"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
 
     <string name="unsharp_mask">Нерезкое маскирование</string>
     <string name="smooth_radius_textView">Радиус размытия:</string>
+    <string name="amount_textView">Эффект:</string>
 
     <string name="save_picture_button">Сохранить</string>
 
