--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="rotation_angle_hint">Угол поворота</string>
 
     <string name="cube_task_name">Игральный кубик</string>
+    <string name="rotate_cube_button">По часовой стрелке</string>
+    <string name="reset_cube_button">Сбросить</string>
 
     <string name="apply_button">Применить</string>
     <string name="isi">isi</string>
