Привел дизайн к единому виду
Сделал везде дизайн, как в макете, поменял в некоторых местах названия вьюшек

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,31 +9,52 @@
     <string name="without_picture_button">Продолжить без изображения</string>
 
     <string name="image_section_name">Изображение</string>
-    <string name="effect_section_name">Эффекты</string>
-    <string name="save_section_name">Сохранить</string>
-
     <string name="image_section_header">Загрузить изображение</string>
-    <string name="effect_section_header">Доступные эффекты</string>
-    <string name="save_section_header">Сохранить изображение</string>
+    <string name="image_desc">Загруженное изображение</string>
 
-    <string name="first_task_name">Поворот</string>
-    <string name="rotation_image_desc">Текущее изображение</string>
+    <string name="effect_section_name">Эффекты</string>
+    <string name="effect_section_header">Доступные эффекты</string>
+
+    <string name="save_section_name">Сохранение</string>
+    <string name="save_section_header">Сохранить изображение</string>
+    <string name="save_image_desc">Изображение с результатом</string>
+    <string name="save_picture_button">Сохранить</string>
+
+    <string name="rotation_task_name">Поворот</string>
     <string name="rotation_angle_hint">Угол поворота</string>
 
-    <string name="unsharp_mask">Нерезкое маскирование</string>
-    <string name="smooth_radius_textView">Радиус размытия:</string>
+    <string name="color_correction_task_name">Цветокоррекция</string>
+    <string name="black_and_white_button">Черно-белый фильтр</string>
+    <string name="sepia_button">Сепия</string>
+    <string name="red_button">Красный фильтр</string>
+    <string name="negative_button">Инверсия</string>
+
+    <string name="retouch_task_name">Ретуширование</string>
+
+    <string name="scaling_task_name">Масштабирование</string>
+    <string name="scale_coefficient">Коэффицент масштабирования</string>
+
+    <string name="segmentation_task_name">Сегментация</string>
+
+    <string name="splines_task_name">Сплайны</string>
+    <string name="delete_point_button">Удалить точку</string>
+
+    <string name="unsharp_mask_task_name">Нерезкое маскирование</string>
+    <string name="radius_textView">Радиус размытия:</string>
     <string name="amount_textView">Эффект:</string>
 
-    <string name="save_picture_button">Сохранить</string>
     <string name="cube_task_name">Игральный кубик</string>
     <string name="rotate_cube_button">По часовой стрелке</string>
     <string name="reset_cube_button">Сбросить</string>
 
     <string name="apply_button">Применить</string>
+    <string name="cancel_button">Отменить действие</string>
+    <string name="current_image_desc">Текущее изображение</string>
+
     <string name="isi">isi</string>
     <string name="kategori">kategori</string>
     <string name="kode">kode</string>
-    <string name="Segmentation">Сегментация</string>
+
     <string name="title_activity_main2">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -43,6 +64,5 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="resize_koef">Коэфицент масштабирования</string>
-    <string name="scaling">Масштабирование</string>
+
 </resources>
