Добавил метки бонусных алгоритмов
Теперь у нас есть использование сторонней библиотеки!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">PhotoEditor</string>
 
-    <!-- MainActivity -->
     <string name="welcome_icon_desc">Добавьте изображение</string>
     <string name="welcome_text">Загрузите изображение из галереи или сделайте фотографию</string>
     <string name="take_picture_button">Камера</string>
@@ -42,18 +41,18 @@
     <string name="retouch_task_desc">Устранение дефектов</string>
 
     <string name="scaling_task_name">Масштабирование</string>
-    <string name="scaling_task_desc">Изменение размера</string>
+    <string name="scaling_task_desc">Изменение размера изображения</string>
     <string name="scale_coefficient">Коэффицент масштабирования</string>
 
     <string name="segmentation_task_name">Сегментация</string>
-    <string name="segmentation_task_desc">Распознавание лиц</string>
+    <string name="segmentation_task_desc">Распознавание лиц на изображении</string>
 
     <string name="splines_task_name">Сплайны</string>
     <string name="splines_task_desc">Преобразование ломаных линий в сплайны</string>
     <string name="delete_point_button">Удалить точку</string>
 
     <string name="unsharp_mask_task_name">Нерезкое маскирование</string>
-    <string name="unsharp_mask_task_desc">Увеличение резкости</string>
+    <string name="unsharp_mask_task_desc">Увеличение резкости изображения</string>
     <string name="radius_textView">Радиус размытия: </string>
     <string name="amount_textView">Эффект: </string>
 
